Some wording changes here and there. Added phishing as motivation and adversary. Discussed implemenation of portal and demo clients.

--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -6,13 +6,21 @@
 
 
 @misc{easypass,
-title={Do you have one of the most common passwords? They’re ridiculously easy to gue}, 
+title={Do you have one of the most common passwords? They’re ridiculously easy to guess}, 
 url={http://www.telegraph.co.uk/technology/2016/01/26/most-common-passwords-revealed---and-theyre-ridiculously-easy-to/},
-journal={Do you have one of the most common passwords? They’re ridiculously easy to gue},
+journal={Do you have one of the most common passwords? They’re ridiculously easy to guess},
 publisher={Telegraph Media Group},
 howpublished={http://www.telegraph.co.uk/technology/2016/01/26/most-common-passwords-revealed---and-theyre-ridiculously-easy-to/},
 }
 
+@misc{phishing,
+title={
+Survey Reveals Spear Phishing as a Top Security Concern to Enterprises}, 
+url={https://blog.cloudmark.com/2016/01/13/survey-spear-phishing-a-top-security-concern-to-enterprises/},
+journal={Survey Reveals Spear Phishing as a Top Security Concern to Enterprises},
+publisher={Cloudmark},
+howpublished={https://blog.cloudmark.com/2016/01/13/survey-spear-phishing-a-top-security-concern-to-enterprises/},
+}
 
 
 
