Added related work section, with one main related item...

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -35,7 +35,7 @@ Thus, we chose to not use passwords at all, at least, not in the traditional sen
 
 %Related work – Summarize the existing work related to your problem.
 \section{Related Work}
-\dots\dots\dots\dots
+	Two factor authentication has been a common solution to user authentication, only gaining more popularity over the past few years; in fact it has recently become a requirement for employees at the University of Utah. Our solution is very similar to 2FA, except it is getting rid of the password step altogether. Other solutions to the password problem is to assign \cite["Smart Cards"]{card} to the user, and use those to assign passwords for users. Our solution uses common user devices (cell phones) instead of expensive proprietary cards. 
 
 %Adversary model – Describe the adversary you are securing against.
 \section{Adversary Model}
