Small changes, added url.

--- a/paper/biblio.bib
+++ b/paper/biblio.bib
@@ -3,11 +3,12 @@
   author={Slee, Mark and Agarwal, Aditya and Kwiatkowski, Marc}
 }
 
-@article{card, title={Password authentication schemes with smart cards },
- url={http://www.sciencedirect.com/science/article/pii/S0167404899801369},
+@article{card, 
+title={Password authentication schemes with smart cards},
+url={http://www.sciencedirect.com/science/article/pii/S0167404899801369},
  howpublished={http://www.sciencedirect.com/science/article/pii/S0167404899801369},
- journal={Computers & Security},
- publisher={Computers & Security},
+ journal={Computers \& Security},
+ publisher={Computers \& Security},
  author={Wen-Her Yang, Shiuh-Pyng Shieh},
  year={2000},
  month={Jan}
