--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -10,6 +10,7 @@
 \title{Third Party Encrypted Storage}
 \author{Travis Taylor, John Robe, and Daniel James}
 \affil{School of Computing, University of Utah}
+\affil{Github Repo: https://github.com/jrobe/cs5490/}
 
 \begin{document}
 
@@ -62,7 +63,7 @@ Our basic design consists of four entities; see Figure \ref{design}.
 
 \begin{figure*}[ht]
 \centering
-\includegraphics[width=\textwidth]{Design}
+\includegraphics[width=.95\textwidth]{Design}
 \caption{Overall system design}
 \label{design}
 \end{figure*}
